--- a/11/photos.html
+++ b/11/photos.html
@@ -23,11 +23,32 @@
     </header>
 
     <article>
-        <h1>Welcome</h1>
-        <p id="intro">Welcome to the official website of Jay Skript and the Domsters. Here, you can <a
-                href="about.html">learn more about the band</a>, view <a href="photos.html">photos of the band</a>, find
-            out about <a href="live.html">tour dates</a> and <a href="contact.html">get in touch with the band</a>.</p>
-    </article>
+        <h1>Photos of the band</h1>
+        <ul id="imagegallery">
+          <li>
+            <a href="images/photos/concert.jpg" title="The crowd goes wild">
+              <img src="images/photos/thumbnail_concert.jpg" alt="the band in concert" />
+            </a>
+          </li>
+          <li>
+            <a href="images/photos/bassist.jpg" title="An atmospheric moment">
+              <img src="images/photos/thumbnail_bassist.jpg" alt="the bassist" />
+            </a>
+          </li>
+          <li>
+            <a href="images/photos/guitarist.jpg" title="Rocking out">
+              <img src="images/photos/thumbnail_guitarist.jpg" alt="the guitarist" />
+            </a>
+          </li>
+          <li>
+            <a href="images/photos/crowd.jpg" title="Encore! Encore!">
+              <img src="images/photos/thumbnail_crowd.jpg" alt="the audience" />
+            </a>
+          </li>
+        </ul>
+      </article>
+
 </body>
 <script src="./scripts/global.js"></script>
+<script src="./scripts/photo.js"></script>
 </html>
