--- a/11/contact.html
+++ b/11/contact.html
@@ -13,7 +13,7 @@
         <img src="images/logo.gif" alt="Jay Skript and the Domsters">
         <nav>
             <ul>
-                <li><a href="index.html" >Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="photos.html">Photo</a></li>
                 <li><a href="live.html">Live</a></li>
@@ -23,11 +23,33 @@
     </header>
 
     <article>
-        <h1>Welcome</h1>
-        <p id="intro">Welcome to the official website of Jay Skript and the Domsters. Here, you can <a
-                href="about.html">learn more about the band</a>, view <a href="photos.html">photos of the band</a>, find
-            out about <a href="live.html">tour dates</a> and <a href="contact.html">get in touch with the band</a>.</p>
+        <h1>Contact the band</h1>
+        <!-- target 属性规定在何处打开 action URL -->
+        <!-- target配合iframe 将其设为 target="test" 防止页面刷新-->
+        <form method="post"  action="submit.html">
+            <fieldset>
+                <p>
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" placeholder="Your name" class="required" />
+                </p>
+                <p>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" placeholder="Your email address"
+                        class="email required" />
+                </p>
+                <p>
+                    <label for="message">Message:</label>
+                    <textarea cols="45" rows="7" id="message" name="message"
+                        placeholder="Write your message here."></textarea>
+                </p>
+                <input type="submit" value="Send" />
+            </fieldset>
+        </form>
+        <!-- 记得删去，此处为submit提交测试 -->
+        <!-- <iframe name="test" style="display:none"></iframe> -->
     </article>
 </body>
 <script src="./scripts/global.js"></script>
+<script src="./scripts/contact.js"></script>
+
 </html>
