--- a/11/live.html
+++ b/11/live.html
@@ -13,7 +13,7 @@
         <img src="images/logo.gif" alt="Jay Skript and the Domsters">
         <nav>
             <ul>
-                <li><a href="index.html" >Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="photos.html">Photo</a></li>
                 <li><a href="live.html">Live</a></li>
@@ -23,11 +23,50 @@
     </header>
 
     <article>
-        <h1>Welcome</h1>
-        <p id="intro">Welcome to the official website of Jay Skript and the Domsters. Here, you can <a
-                href="about.html">learn more about the band</a>, view <a href="photos.html">photos of the band</a>, find
-            out about <a href="live.html">tour dates</a> and <a href="contact.html">get in touch with the band</a>.</p>
+        <h1>Tour dates</h1>
+        <table summary="when and where you can see the band">
+            <!-- 表头 -->
+            <thead>
+            <tr>
+              <th>Date</th>
+              <th>City</th>
+              <th>Venue</th>
+            </tr>
+            </thead>
+
+            <!-- 表体 -->
+            <tbody>
+                <!-- 第一行 -->
+            <tr>
+                <!-- 第一列 -->
+              <td>June 9th</td>
+                <!-- 第二列 -->
+              <td>Portland, <abbr title="Oregon">OR</abbr></td>
+                <!-- 第三列 -->
+              <td>Crystal Ballroom</td>
+            </tr>
+
+            <tr>
+              <td>June 10th</td>
+              <td>Seattle, <abbr title="Washington">WA</abbr></td>
+              <td>Crocodile Cafe</td>
+            </tr>
+            <tr>
+              <td>June 12th</td>
+              <td>Sacramento, <abbr title="California">CA</abbr></td>
+              <td>Torch Club</td>
+            </tr>
+            <tr>
+              <td>June 17th</td>
+              <td>Austin, <abbr title="Texas">TX</abbr></td>
+              <td>Speakeasy</td>
+            </tr>
+            </tbody>
+          </table>
+
     </article>
 </body>
 <script src="./scripts/global.js"></script>
+<script src="./scripts/live.js"></script>
+
 </html>
